--- a/main.html
+++ b/main.html
@@ -29,13 +29,75 @@
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-shopping-cart"></a>
         </div>
-
-
-
     </header>
 
+    <form id="search-form">
+        <input type="search" placeholder="찾을 제품 검색하세요." id="search-input">
+        <label for="search-input" class="fas fa-search"></label>
+        <i class="fas fa-times" id="search-close"></i>
+    </form>
 
-
+    <section id="hot-drink" class="hot-drink">
+        <div class="container">
+            <div class="wrapper">
+                <div class="slide">
+                    <div class="content">
+                        <span>Hot RedWine</span>
+                        <h3>Textbook</h3>
+                        <p>Napa Cabernet Sauvignon</p>
+                        <a href="#" class="buy-btn"></a>
+                    </div>
+                    <div class="img">
+                        <img src="./img/textbook.png" alt="텍스트북">
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="content">
+                        <span>Hot WhiteWine</span>
+                        <h3>Cloudy Bay</h3>
+                        <p>Sauvignon Blanc</p>
+                        <a href="#" class="buy-btn"></a>
+                    </div>
+                    <div class="img">
+                        <img src="./img/클라우디베이.png" alt="클라우디 베이">
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="content">
+                        <span>Hot Champagne</span>
+                        <h3>Moet & Chandon</h3>
+                        <p>Imperial</p>
+                        <a href="#" class="buy-btn"></a>
+                    </div>
+                    <div class="img">
+                        <img src="./img/moet.png" alt="모엣샹동">
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="content">
+                        <span>Hot Whisky</span>
+                        <h3>The BALVENIE</h3>
+                        <p>DoubleWood 12Y</p>
+                        <a href="#" class="buy-btn"></a>
+                    </div>
+                    <div class="img">
+                        <img src="./img/bal.jpg" alt="발베니12">
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="content">
+                        <span>Hot Jin</span>
+                        <h3>Hendrick's</h3>
+                        <p>Hendrick's Gin</p>
+                        <a href="#" class="buy-btn"></a>
+                    </div>
+                    <div class="img">
+                        <img src="./img/HANDRICKS.png" alt="핸드릭스">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
