--- a/main.html
+++ b/main.html
@@ -127,7 +127,7 @@
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="./img/프로슈토.jpg" alt="프로슈토 멜론" style="width: 35rem;">
+                <img src="./img/프로슈토멜론.jpg" alt="프로슈토 멜론" style="width: 35rem;">
                 <h3>Tasty Plate</h3>
                 <div class="star">
                     <i class="fa-solid fa-star"></i>
@@ -144,7 +144,7 @@
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="./img/플레터.jpg" alt="치즈플레터" style="width: 35rem;">
+                <img src="./img/치즈플레이트.jpg" alt="치즈플레터" style="width: 35rem;">
                 <h3>Tasty Plate</h3>
                 <div class="star">
                     <i class="fa-solid fa-star"></i>
@@ -195,8 +195,8 @@
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="./img/하몽플레터.jpg" alt="하몽플레터" style="width: 35rem;">
-                <h3>Tasty Drink</h3>
+                <img src="./img/하몽플레이트.jpg" alt="하몽플레터" style="width: 35rem;">
+                <h3>Tasty Plate</h3>
                 <div class="star">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
