--- a/main.html
+++ b/main.html
@@ -14,15 +14,13 @@
     <header>
         <a href="#" class="logo"><i class="fa-solid fa-wine-glass"></i>bonjouryu</a>
         <nav class="navbar">
-            <a href="#home">home</a>
-            <a href="#Rwine">redWine</a>
-            <a href="#Wwine">whiteWine</a>
-            <a href="#Champagne">champagne</a>
-            <a href="#jin">jin</a>
-            <a href="#whisky">whisky</a>
-            <a href="#review">review</a>
-            <a href="#order">order</a>
-        </nav>
+            <a href="#">Wine</a>
+            <a href="#">liquor</a>
+            <a href="#Recipe">Recipe</a>
+            <a href="#About">About</a>
+            <a href="#Review">review</a>
+            <a href="#Order">order</a>
+        </nav>    
         <div class="icons">
             <i class="fas fa-bars" id="menu-bars"></i>
             <i class="fas fa-search" id="search-icon"></i>
@@ -101,131 +99,107 @@
             <div class="swiper-pagination"></div>
         </div>
     </section>
-    <!--  -->
-    <section id="Recipe" class="Recipe">
-        <h3 class="sub-title">Trendy Recipe</h3>
-        <h1 class="title">Popular Recipe</h1>
 
+    <!-- 레시피 영역 -->
+    <section id="Recipe" class="Recipe">
+        <h3 class="sub-title">Trendy Menu</h3>
+        <h1 class="title">Popular Recipe</h1>
         <div class="box-container">
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="./img/진토닉.jpg" alt="진토닉" style="height: 30rem;">
-                <h3>Tasty Drink</h3>
-                <div class="star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </div>
-                <span>진토닉</span>
-                <a href="#" class="btn">보러가기</a>
-            </div>
-        </div>
-        <div class="box-container">
-            <div class="box">
-                <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="fas fa-eye"></a>
-                <img src="./img/프로슈토멜론.jpg" alt="프로슈토 멜론" style="width: 35rem;">
-                <h3>Tasty Plate</h3>
-                <div class="star">
+                <img src="./img/프로슈토멜론.jpg" alt="프로슈토멜론" style="width: 30rem;">
+                <h3>프로슈토멜론</h3>
+                <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-alt"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <span>프로슈토 멜론</span>
-                <a href="#" class="btn">보러가기</a>
+                <!-- <span>프로슈토멜론</span> -->
+                <a href="#" class="Recipe-btn">보러가기</a>
             </div>
-        </div>
-        <div class="box-container">
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="./img/치즈플레이트.jpg" alt="치즈플레터" style="width: 35rem;">
-                <h3>Tasty Plate</h3>
-                <div class="star">
+                <img src="./img/치즈플레이트.jpg" alt="치즈플레이트" style="width: 30rem;">
+                <h3>치즈플레이트</h3>
+                <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <span>치즈플레터</span>
-                <a href="#" class="btn">보러가기</a>
+                <!-- <span>치즈플레이트</span> -->
+                <a href="#" class="Recipe-btn">보러가기</a>
             </div>
-        </div>
-        <div class="box-container">
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="./img/죠니하이볼.jpg" alt="죠니하이볼" style="height: 30rem;">
-                <h3>Tasty Drink</h3>
-                <div class="star">
+                <img src="./img/과일플레이트.jpg" alt="과일플레이트" style="width: 30rem;">
+                <h3>과일플레이트</h3>
+                <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <span>죠니하이볼</span>
-                <a href="#" class="btn">보러가기</a>
+                <!-- <span>과일플레이트</span> -->
+                <a href="#" class="Recipe-btn">보러가기</a>
             </div>
-        </div>
-        <div class="box-container">
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="./img/mal.jpg" alt="말리부하이볼" style="height: 30rem;">
-                <h3>Tasty Drink</h3>
-                <div class="star">
+                <img src="./img/쵸코플레이트.jpg" alt="쵸코플레이트" style="width: 30rem;">
+                <h3>초코플레이트</h3>
+                <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-alt"></i>
                 </div>
-                <span>말리부하이볼</span>
-                <a href="#" class="btn">보러가기</a>
+                <!-- <span>쵸코플레이트</span> -->
+                <a href="#" class="Recipe-btn">보러가기</a>
             </div>
-        </div>
-        <div class="box-container">
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="./img/하몽플레이트.jpg" alt="하몽플레터" style="width: 35rem;">
-                <h3>Tasty Plate</h3>
-                <div class="star">
+                <img src="./img/하몽플레이트.jpg" alt="하몽플레이트" style="width: 30rem;">
+                <h3>하몽플레이트</h3>
+                <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <span>하몽플레터</span>
-                <a href="#" class="btn">보러가기</a>
+                <!-- <span>하몽플레이트</span> -->
+                <a href="#" class="Recipe-btn">보러가기</a>
             </div>
-        </div>
-        <div class="box-container">
             <div class="box">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
-                <img src="./img/bom.png" alt="봄베이하이볼" style="height: 30rem;">
-                <h3>Tasty Drink</h3>
-                <div class="star">
+                <img src="./img/견과류플레이트.jpg" alt="견과류플레이트" style="width: 30rem;">
+                <h3>견과류플레이트</h3>
+                <div class="stars">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
-                <span>봄베이하이볼</span>
-                <a href="#" class="btn">보러가기</a>
+                <!-- <span>견과류플레이트</span> -->
+                <a href="#" class="Recipe-btn">보러가기</a>
             </div>
         </div>
     </section>
+
+    <!--  -->
+
 
 
 
