--- a/main.html
+++ b/main.html
@@ -15,11 +15,11 @@
         <a href="#" class="logo"><i class="fa-solid fa-wine-glass"></i>bonjouryu</a>
         <nav class="navbar">
             <a href="#">Wine</a>
-            <a href="#">liquor</a>
+            <a href="#">Liquor</a>
             <a href="#Recipe">Recipe</a>
             <a href="#About">About</a>
-            <a href="#Review">review</a>
-            <a href="#Order">order</a>
+            <a href="#Review">Review</a>
+            <a href="#Order">Order</a>
         </nav>    
         <div class="icons">
             <i class="fas fa-bars" id="menu-bars"></i>
@@ -45,7 +45,7 @@
                         <span>Hot RedWine</span>
                         <h3>Textbook</h3>
                         <p>Napa Cabernet Sauvignon</p>
-                        <a href="#" class="btn">Buy Now</a>
+                        <a href="#" class="btn">구매하기</a>
                     </div>
                     <div class="image">
                         <img src="./img/textbook.png" alt="텍스트북">
@@ -56,7 +56,7 @@
                         <span>Hot WhiteWine</span>
                         <h3>Cloudy Bay</h3>
                         <p>Sauvignon Blanc</p>
-                        <a href="#" class="btn">Buy Now</a>
+                        <a href="#" class="btn">구매하기</a>
                     </div>
                     <div class="image">
                         <img style="height: 56rem;" src="./img/클라우디베이.png" alt="클라우디 베이">
@@ -67,7 +67,7 @@
                         <span>Hot Champagne</span>
                         <h3>Moet & Chandon</h3>
                         <p>Imperial</p>
-                        <a href="#" class="btn">Buy Now</a>
+                        <a href="#" class="btn">구매하기</a>
                     </div>
                     <div class="image">
                         <img style="height: 56rem;" src="./img/moet.png" alt="모엣샹동">
@@ -76,9 +76,9 @@
                 <div class="swiper-slide slide">
                     <div class="content">
                         <span>Hot Whisky</span>
-                        <h3>The BALVENIE</h3>
+                        <h3>THE BALVENIE</h3>
                         <p>DoubleWood 12Y</p>
-                        <a href="#" class="btn">Buy Now</a>
+                        <a href="#" class="btn">구매하기</a>
                     </div>
                     <div class="image">
                         <img style="height: 56rem;" src="./img/bal.jpg" alt="발베니12">
@@ -89,7 +89,7 @@
                         <span>Hot Jin</span>
                         <h3>Hendrick's</h3>
                         <p>Hendrick's Gin</p>
-                        <a href="#" class="btn">Buy Now</a>
+                        <a href="#" class="btn">구매하기</a>
                     </div>
                     <div class="image">
                         <img style="height: 60rem;" src="./img/HANDRICKS.png" alt="핸드릭스">
@@ -198,10 +198,129 @@
         </div>
     </section>
 
-    <!--  -->
+    <!-- 고객응대 관련? -->
+    <section class="About" id="About">
+        <h3 class="sub-title">ABOUT US</h3>
+        <h1 class="title">WHY CHOOSE US?</h1>
+        <div class="row">
+            <div class="image">
+                <img src="./img/about.jpg" alt="">
+            </div>
+            <div class="about-contents">
+                <h3>Best WineShop in the Korea</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eos, ratione. Ipsa, eligendi expedita libero quisquam iusto est minus molestiae ex!
+                    Atque aliquid cupiditate consequatur recusandae esse non ducimus, possimus repellat.</p>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Nulla, magnam itaque. Assumenda quis a neque laudantium velit, 
+                    culpa optio commodi, itaque pariatur magni eius, facere ratione consectetur? 
+                    Ipsa, totam tempore.
+                </p>
+                <div class="icons-container">
+                    <div class="icons">
+                        <i class="fas fa-shipping-fast"></i>
+                        <span>Fast Delivery</span>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-dollar-sign"></i>
+                        <span>Easy Payments</span>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-headset"></i>
+                        <span>EveryDay Service</span>
+                    </div>
+                </div>
+                <a href="#" class="btn">learn more</a>    
+            </div>
+        </div>
+    </section>
 
-
-
+    <!-- 대표 리뷰 -->
+    <section class="Review" id="Review">
+        <h3 class="sub-title">CUSYOMER'S REVIEW</h3>
+        <h1 class="title">WHAT THEY SAY</h1>
+        <div class="swiper-container review-slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="./img/undertaker.jpg" alt="">
+                        <div class="user-info">
+                            <h3>UnderTaker</h3>
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <P>
+                        Rest In Peace
+                    </P>
+                </div>
+                <div class="swiper-slide slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="./img/austin.jpg" alt="">
+                        <div class="user-info">
+                            <h3>Steve Austin</h3>
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <P>
+                        What?
+                    </P>
+                </div>
+                <div class="swiper-slide slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="./img/Rock.jpg" alt="">
+                        <div class="user-info">
+                            <h3>The Rock</h3>
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <P>
+                        Wow... Very go.. It Doesn't Matter What you Think!!!
+                    </P>
+                </div>
+                <div class="swiper-slide slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="./img/HHH.jpg" alt="">
+                        <div class="user-info">
+                            <h3>Triple H</h3>
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <P>
+                        It's time to play the game
+                    </P>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
