--- a/main.html
+++ b/main.html
@@ -296,7 +296,7 @@
                         </div>
                     </div>
                     <P>
-                        Wow... Very go.. It Doesn't Matter What you Think!!!
+                       It Doesn't Matter What you Think!!!
                     </P>
                 </div>
                 <div class="swiper-slide slide">
@@ -318,12 +318,121 @@
                         It's time to play the game
                     </P>
                 </div>
+                <div class="swiper-slide slide">
+                    <i class="fas fa-quote-right"></i>
+                    <div class="user">
+                        <img src="./img/shawn.jpg" alt="">
+                        <div class="user-info">
+                            <h3>Shawn Michaels</h3>
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <P>
+                        good~~
+                    </P>
+                </div>
             </div>
         </div>
     </section>
 
+    <!-- 주문영역 -->
+    <section class="Order" id="Order">
+        <h3 class="sub-title">ORDER NOW</h3>
+        <h1 class="title">FREE AND FAST</h1>
+        <form action="">
+            <div class="inputBox">
+                <div class="input">
+                    <span>Your Name</span>
+                    <input type="text" placeholder="enter your name">
+                </div>
+                <div class="input">
+                    <span>Your Number</span>
+                    <input type="Number" placeholder="enter your Number">
+                </div>
+            </div>
+            <div class="inputBox">
+                <div class="input">
+                    <span>Your Order</span>
+                    <input type="text" placeholder="enter product name">
+                </div>
+                <div class="input">
+                    <span>Additional Set</span>
+                    <input type="test" placeholder="extra with Set">
+                </div>
+            </div>
+            <div class="inputBox">
+                <div class="input">
+                    <span>how much</span>
+                    <input type="Number" placeholder="how many orders">
+                </div>
+                <div class="input">
+                    <span>Date and Time</span>
+                    <input type="datetime-local">
+                </div>
+            </div>
+            <div class="inputBox">
+                <div class="input">
+                    <span>Your Address</span>
+                    <textarea name="" type="Number" placeholder="enter your address" id="" cols="30" rows="10"></textarea>
+                </div>
+                <div class="input">
+                    <span>Your Message</span>
+                    <textarea name="" placeholder="enter your message" id="" cols="30" rows="10"></textarea>
+                </div>
+            </div>
+            <input type="submit" value="order now" class="btn">
+        </form>
+    </section>
 
 
+    <!-- footer -->
+    <section class="Footer">
+        <div class="box-container">
+            <div class="box">
+                <h3>Locations</h3>
+                <a href="#">KOREA</a>
+                <a href="#">USA</a>
+                <a href="#">JAPAN</a>
+                <a href="#">SPAIN</a>
+                <a href="#">ENGLAND</a>
+                <a href="#">FRANCE</a>
+            </div>
+            <div class="box">
+                <h3>Quick Links</h3>
+                <a href="#">Wine</a>
+                <a href="#">Liquor</a>
+                <a href="#">Recipe</a>
+                <a href="#">About</a>
+                <a href="#">Review</a>
+                <a href="#">Order</a>
+            </div>
+            <div class="box">
+                <h3>Contact Info</h3>
+                <a href="#">+082 010-0000-0000</a>
+                <a href="#">+082 010-1234-5678</a>
+                <a href="#">abcd@gmail.com</a>
+                <a href="#">abcd@naver.com</a>
+                <a href="#">Seoul, blah blah~~~~~</a>
+            </div>
+            <div class="box">
+                <h3>Follow Us</h3>
+                <a href="#">fACEBOOK</a>
+                <a href="#">TWITTER</a>
+                <a href="#">INSTAGRAM</a>
+            </div>
+        </div>
+        <div class="credit"> copyright @ 2023 by <span>LSM</span></div>
+    </section>
+
+    <div class="loader-container">
+        <img src="./img/minion.gif" alt="">
+    </div>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="https://kit.fontawesome.com/2c3a34c36f.js" crossorigin="anonymous"></script>
